# lca-reliable-agents

./: .gitignore  README.md  agent_v0.py  agent_v1.py  agent_v2.py  agent_v3.py  agent_v4.py  agent_v5.py  eval_conciseness_pairwise.ts  generate_qa_traces.py
python/: .env.example  README.md  env_utils.py  example.env  generate_qa_traces.py  generated_questions_results_results.csv  inspect_recent.py  officeflow_agent  pyproject.toml  requirements.txt
python/chapter-2/: run_pairwise_experiment.py
python/chapter-2/lesson-3/: run_experiment.py
python/chapter-2/lesson-5/: eval_conciseness_pairwise.py
python/chapter-3/: PRD.md  enumerate_categories.py  generated_questions_results_results.csv  run_experiment.py
python/chapter-3/lesson-2/: category_combinations.csv  download_traces.py  generated_questions_results.csv  question_generator_prompt.md  run_questions.py  run_questions_parallel.py  sample_of_inventory_with_prices.csv  upload_traces.py
python/module-1/lesson-2/: langchain_agent.py  third_party_agent.py  thread_agent.py
python/module-2/lesson-2/: debug_dataset.csv  officeflow-dataset.csv
python/module-2/lesson-3/: eval_database_usage.py  eval_tool_usage.py  run_experiment.py  run_tool_usage_eval.py
python/module-2/lesson-4/: eval_schema_check.py  run_eval.py  run_experiment.py
python/module-2/lesson-5/: run_experiment.py
python/module-2/lesson-6/: eval_conciseness_pairwise.py  run_agents.py  run_pairwise_experiment.py
python/module-3/lesson-2/: PRD.md  generate_traces.py  run_questions.py  run_questions_parallel.py  test_categories.md  upload_traces.py
python/module-3/lesson-3/: eval_database_usage.py  generated_questions.csv  run_experiment.py
python/module-3/lesson-4/: generate_traces.py  upload_traces.py
python/officeflow-agent/: agent_v0.py  agent_v1.py  agent_v2.py  agent_v3.py  agent_v4.py  agent_v5.py  agent_v6.py  eval_schema_first.py
python/officeflow_agent/: agent_v0.py  agent_v1.py  agent_v2.py  agent_v3.py  agent_v4.py  agent_v5.py  agent_v6.py
ts/: README.md  (+5 more)
(+44 files in other folders)
